Bug 125187 - FILEOPEN DOCX Rejecting tracked changes gives different results than in Word
Summary: FILEOPEN DOCX Rejecting tracked changes gives different results than in Word
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2019-05-09 08:09 UTC by Gabor Kelemen (Collabora)
Modified: 2021-07-21 11:26 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (24.15 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-05-09 08:09 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the original document side by side in Word and Writer (91.18 KB, image/png)
2019-05-09 08:09 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the document after rejecting all changes (83.62 KB, image/png)
2019-05-09 08:10 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2019-05-09 08:09:03 UTC
Created attachment 151264 [details]
Example file from Word

When Remove personal information option is turned on, rejecting changes that are insertion and deletion give different results than the same operation in Word.


Steps to reproduce:
    1. Create some text content in Word, save it
    2. Turn on change tracking and insert a few words (“This is some text inserted by one anonymous author.” in the example)
    3. Save the file again, make sure to remove author information in the Document inspector
    4. Remove a word (“text” in the example) from the previously inserted ones and save the file, again removing author information.
    5. Open the file in Writer and go to Edit – Change tracking - Manage
    6. Notice that there are three entries in the list, two additions and between them one removal, while in Word there was one addition and one removal
    7. Reject all changes. Notice the removed word is kept while the added ones are removed.
    8. Open the original file in Word and reject all changes. All added words, including the later removed one is gone.

Actual results:
The word removed in step 4 is kept after rejecting all changes.

Expected results:
The word removed in step 4 is removed after rejecting all changes.

LibreOffice details:
Version: 6.3.0.0.alpha0+
Build ID: 83abdf803a023067ebc207fd82dde987df233754
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded

In 6.0 the deletion did not appear at all, so rejecting the addition resulted in the same text as in Word, although accepting the change did not.
Comment 1 Gabor Kelemen (Collabora) 2019-05-09 08:09:31 UTC
Created attachment 151265 [details]
Screenshot of the original document side by side in Word and Writer
Comment 2 Gabor Kelemen (Collabora) 2019-05-09 08:10:21 UTC
Created attachment 151266 [details]
Screenshot of the document after rejecting all changes
Comment 3 Roman Kuznetsov 2019-05-09 13:51:59 UTC
confirm in

Version: 6.3.0.0.alpha0+
Build ID: 65f81f6acdeb03b34033a1c6515618936d5f8eca
CPU threads: 4; OS: Linux 5.0; UI render: default; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-04-23_17:18:14
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded
Comment 4 Commit Notification 2019-05-11 11:10:34 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/2de1fd7d8b8bd42c66190140cc4506df0c3367f1%5E%21

tdf#125187 DOCX track changes: fix w:del within w:ins

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 László Németh 2019-05-11 11:11:48 UTC
Gábor, Roman: Thanks for the report and the confirmation.