tdf#125187 DOCX track changes: fix w:del within w:ins

by removing deletions within insertions, because
Writer core doesn't support overlapping redlines,
ie. tracked deletion as part of a tracked insertion.

Note: Commit 7a810d6a9fb79a24d00e5dbd8e1223e6f8b09677
handled this by breaking the tracked changes, fixing
"Accept All", but not the "Reject All".

Change-Id: Iad5932d97cd45bdd62c2df21abd4bcc0b4c3d9a1
Reviewed-on: https://gerrit.libreoffice.org/72128
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>